# Angel

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
angel/: config.cpp  config.h  log.cpp  log.h  singleton.h  util.cpp  util.h
tests/: config_test.cpp  log_test.cpp  test.cpp
